abstract class StringConstants {
  static const String appName = 'NuConta Marketplace';
  static const String errorWhenFetchingData = 'An unexpected error occurred';
  static const String tryAgain = 'Reload';
  static const String hello = 'Hi';
  static const String balance = 'Balance';
  static const String offers = 'Offers';
  static const String buyNow = 'Buy now';
  static const String successfulPurchase = 'Successful purchase';
  static const String yourSuccessfulPurchase =
      'Your purchase was successful :)';
  static const String errorAtCheckout = 'Error at checkout';
  static const String ok = 'ok';
}
